--- a/birthday_app/views/layout.erb
+++ b/birthday_app/views/layout.erb
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Birthday Calculator</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&family=Rubik+Gemstones&display=swap" rel="stylesheet">
   </head>
   <body>
     <%= yield %>
