--- a/birthday_app/public/stylesheets/styles.css
+++ b/birthday_app/public/stylesheets/styles.css
@@ -6,6 +6,7 @@ body {
 h1 {
   text-align: center;
   font-family: 'Rubik Gemstones', cursive;
+  font-size: 100px;
 }
 
 form {
@@ -17,34 +18,47 @@ form {
 }
 
 div#box {
-  background-color:#fff;
+  background-color: #fde1f6;
   border-radius: 10px;
   padding: 8%;
   font-weight: 100px;
+  float: center;
+  color: #555eae;
 }
 
-label.input_prompt{
+label.input_prompt {
   text-align: center;
   display: block;
   margin-bottom: 6%;
 }
 
 input.input_box {
-  background-color: #ffff;
-}
-
-#box .input {
-  color: #ff476f; 
-  font-family: 'Raleway', sans-serif;
-  margin: 10px;
-  padding: 100;
-  width: 75%;
-  border-color: #ffff;
   background-color: #c2e5d3;
-  box-shadow: 10px; 
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  margin-bottom: 6%;
+  padding: 5px;
+  outline: none;
+  border-color: #fff;
+  border-radius: 5px;
+  color: #ff476f;
+  width: 40%;
+  box-shadow: none;
+  border: none;
 }
 
-input#submit {
-  background-color: white;
-  width: 75%
-} 
+input#submit_button {
+  color: #555eae; 
+  font-family: 'Raleway', sans-serif;
+  width: 30%; 
+  background-color: #fde1f6;
+  border-radius: 7px;
+  margin-top: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: medium; 
+  bottom: 20px;
+  float: center;
+  box-shadow: none;
+  border: none;
+}
