--- a/birthday_app/views/index.erb
+++ b/birthday_app/views/index.erb
@@ -2,12 +2,14 @@
 
 <form method="POST" action="/">
   <div id=box>
-    <label class=input_prompt>What's your name?:</label>
+    <label class=input_prompt>What's your name?</label>
     <input class=input_box type="text" name="name" />
 
     <label class=input_prompt>When is your birthday?</label>
     <input class=input_box type="date" min=<%= Date.today %> name="birthday_date" />
-
-  </div>
+    <%- if @error %>
+      <div className=error> <%= @error %> </div>
+    <% end %>
+    </div>
   <input id=submit_button type="submit" />
 </form>
